src/parser/mygrammarParser.cpp

// Generated from mygrammar.g4 by ANTLR 4.13.2


#include "mygrammarVisitor.h"

#include "mygrammarParser.h"


using namespace antlrcpp;

using namespace antlr4;

namespace {

struct MygrammarParserStaticData final {
  MygrammarParserStaticData(std::vector<std::string> ruleNames,
                        std::vector<std::string> literalNames,
                        std::vector<std::string> symbolicNames)
      : ruleNames(std::move(ruleNames)), literalNames(std::move(literalNames)),
        symbolicNames(std::move(symbolicNames)),
        vocabulary(this->literalNames, this->symbolicNames) {}

  MygrammarParserStaticData(const MygrammarParserStaticData&) = delete;
  MygrammarParserStaticData(MygrammarParserStaticData&&) = delete;
  MygrammarParserStaticData& operator=(const MygrammarParserStaticData&) = delete;
  MygrammarParserStaticData& operator=(MygrammarParserStaticData&&) = delete;

  std::vector<antlr4::dfa::DFA> decisionToDFA;
  antlr4::atn::PredictionContextCache sharedContextCache;
  const std::vector<std::string> ruleNames;
  const std::vector<std::string> literalNames;
  const std::vector<std::string> symbolicNames;
  const antlr4::dfa::Vocabulary vocabulary;
  antlr4::atn::SerializedATNView serializedATN;
  std::unique_ptr<antlr4::atn::ATN> atn;
};

::antlr4::internal::OnceFlag mygrammarParserOnceFlag;
#if ANTLR4_USE_THREAD_LOCAL_CACHE
static thread_local
#endif
std::unique_ptr<MygrammarParserStaticData> mygrammarParserStaticData = nullptr;

void mygrammarParserInitialize() {
#if ANTLR4_USE_THREAD_LOCAL_CACHE
  if (mygrammarParserStaticData != nullptr) {
    return;
  }
#else
  assert(mygrammarParserStaticData == nullptr);
#endif
  auto staticData = std::make_unique<MygrammarParserStaticData>(
    std::vector<std::string>{
      "prog", "statement", "peremDeclaration", "type", "assignment", "ifStatement", 
      "whileStatement", "printStatement", "expression", "logicalOr", "logicalAnd", 
      "equality", "comparison", "addition", "multiplication", "unary", "primary"
    },
    std::vector<std::string>{
      "", "';'", "'='", "'int'", "'double'", "'if'", "'('", "')'", "'{'", 
      "'}'", "'else'", "'while'", "'print'", "'||'", "'&&'", "'=='", "'!='", 
      "'<'", "'>'", "'<='", "'>='", "'+'", "'-'", "'*'", "'/'"
    },
    std::vector<std::string>{
      "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", 
      "", "", "", "", "", "", "", "", "INT", "DOUBLE", "ID", "WS", "COMMENT"
    }
  );
  staticData->serializedATN = antlr4::atn::SerializedATNView(serializedATNSegment, sizeof(serializedATNSegment) / sizeof(serializedATNSegment[0]));

  antlr4::atn::ATNDeserializer deserializer;
  staticData->atn = deserializer.deserialize(staticData->serializedATN);

  const size_t count = staticData->atn->getNumberOfDecisions();
  staticData->decisionToDFA.reserve(count);
  for (size_t i = 0; i < count; i++) { 
    staticData->decisionToDFA.emplace_back(staticData->atn->getDecisionState(i), i);
  }
  mygrammarParserStaticData = std::move(staticData);
}

}

mygrammarParser::mygrammarParser(TokenStream *input) : mygrammarParser(input, antlr4::atn::ParserATNSimulatorOptions()) {}

mygrammarParser::mygrammarParser(TokenStream *input, const antlr4::atn::ParserATNSimulatorOptions &options) : Parser(input) {
  mygrammarParser::initialize();
  _interpreter = new atn::ParserATNSimulator(this, *mygrammarParserStaticData->atn, mygrammarParserStaticData->decisionToDFA, mygrammarParserStaticData->sharedContextCache, options);
}

mygrammarParser::~mygrammarParser() {
  delete _interpreter;
}

const atn::ATN& mygrammarParser::getATN() const {
  return *mygrammarParserStaticData->atn;
}

std::string mygrammarParser::getGrammarFileName() const {
  return "mygrammar.g4";
}

const std::vector<std::string>& mygrammarParser::getRuleNames() const {
  return mygrammarParserStaticData->ruleNames;
}

const dfa::Vocabulary& mygrammarParser::getVocabulary() const {
  return mygrammarParserStaticData->vocabulary;
}

antlr4::atn::SerializedATNView mygrammarParser::getSerializedATN() const {
  return mygrammarParserStaticData->serializedATN;
}


//----------------- ProgContext ------------------------------------------------------------------

mygrammarParser::ProgContext::ProgContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* mygrammarParser::ProgContext::EOF() {
  return getToken(mygrammarParser::EOF, 0);
}

std::vector<mygrammarParser::StatementContext *> mygrammarParser::ProgContext::statement() {
  return getRuleContexts<mygrammarParser::StatementContext>();
}

mygrammarParser::StatementContext* mygrammarParser::ProgContext::statement(size_t i) {
  return getRuleContext<mygrammarParser::StatementContext>(i);
}


size_t mygrammarParser::ProgContext::getRuleIndex() const {
  return mygrammarParser::RuleProg;
}


std::any mygrammarParser::ProgContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<mygrammarVisitor*>(visitor))
    return parserVisitor->visitProg(this);
  else
    return visitor->visitChildren(this);
}

mygrammarParser::ProgContext* mygrammarParser::prog() {
  ProgContext *_localctx = _tracker.createInstance<ProgContext>(_ctx, getState());
  enterRule(_localctx, 0, mygrammarParser::RuleProg);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(37);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 241178744) != 0)) {
      setState(34);
      statement();
      setState(39);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(40);
    match(mygrammarParser::EOF);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- StatementContext ------------------------------------------------------------------

mygrammarParser::StatementContext::StatementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t mygrammarParser::StatementContext::getRuleIndex() const {
  return mygrammarParser::RuleStatement;
}

void mygrammarParser::StatementContext::copyFrom(StatementContext *ctx) {
  ParserRuleContext::copyFrom(ctx);
}

//----------------- IfStmtContext ------------------------------------------------------------------

mygrammarParser::IfStatementContext* mygrammarParser::IfStmtContext::ifStatement() {
  return getRuleContext<mygrammarParser::IfStatementContext>(0);
}

mygrammarParser::IfStmtContext::IfStmtContext(StatementContext *ctx) { copyFrom(ctx); }


std::any mygrammarParser::IfStmtContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<mygrammarVisitor*>(visitor))
    return parserVisitor->visitIfStmt(this);
  else
    return visitor->visitChildren(this);
}
//----------------- PrintStmtContext ------------------------------------------------------------------

mygrammarParser::PrintStatementContext* mygrammarParser::PrintStmtContext::printStatement() {
  return getRuleContext<mygrammarParser::PrintStatementContext>(0);
}

mygrammarParser::PrintStmtContext::PrintStmtContext(StatementContext *ctx) { copyFrom(ctx); }


std::any mygrammarParser::PrintStmtContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<mygrammarVisitor*>(visitor))
    return parserVisitor->visitPrintStmt(this);
  else
    return visitor->visitChildren(this);
}
//----------------- ExprStmtContext ------------------------------------------------------------------

mygrammarParser::ExpressionContext* mygrammarParser::ExprStmtContext::expression() {
  return getRuleContext<mygrammarParser::ExpressionContext>(0);
}

mygrammarParser::ExprStmtContext::ExprStmtContext(StatementContext *ctx) { copyFrom(ctx); }


std::any mygrammarParser::ExprStmtContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<mygrammarVisitor*>(visitor))
    return parserVisitor->visitExprStmt(this);
  else
    return visitor->visitChildren(this);
}
//----------------- WhileStmtContext ------------------------------------------------------------------

mygrammarParser::WhileStatementContext* mygrammarParser::WhileStmtContext::whileStatement() {
  return getRuleContext<mygrammarParser::WhileStatementContext>(0);
}

mygrammarParser::WhileStmtContext::WhileStmtContext(StatementContext *ctx) { copyFrom(ctx); }


std::any mygrammarParser::WhileStmtContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<mygrammarVisitor*>(visitor))
    return parserVisitor->visitWhileStmt(this);
  else
    return visitor->visitChildren(this);
}
//----------------- PeremCreatingContext ------------------------------------------------------------------

mygrammarParser::PeremDeclarationContext* mygrammarParser::PeremCreatingContext::peremDeclaration() {
  return getRuleContext<mygrammarParser::PeremDeclarationContext>(0);
}

mygrammarParser::PeremCreatingContext::PeremCreatingContext(StatementContext *ctx) { copyFrom(ctx); }


std::any mygrammarParser::PeremCreatingContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<mygrammarVisitor*>(visitor))
    return parserVisitor->visitPeremCreating(this);
  else
    return visitor->visitChildren(this);
}
//----------------- AssignSmthContext ------------------------------------------------------------------

mygrammarParser::AssignmentContext* mygrammarParser::AssignSmthContext::assignment() {
  return getRuleContext<mygrammarParser::AssignmentContext>(0);
}

mygrammarParser::AssignSmthContext::AssignSmthContext(StatementContext *ctx) { copyFrom(ctx); }


std::any mygrammarParser::AssignSmthContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<mygrammarVisitor*>(visitor))
    return parserVisitor->visitAssignSmth(this);
  else
    return visitor->visitChildren(this);
}
mygrammarParser::StatementContext* mygrammarParser::statement() {
  StatementContext *_localctx = _tracker.createInstance<StatementContext>(_ctx, getState());
  enterRule(_localctx, 2, mygrammarParser::RuleStatement);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(56);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 1, _ctx)) {
    case 1: {
      _localctx = _tracker.createInstance<mygrammarParser::PeremCreatingContext>(_localctx);
      enterOuterAlt(_localctx, 1);
      setState(42);
      peremDeclaration();
      setState(43);
      match(mygrammarParser::T__0);
      break;
    }

    case 2: {
      _localctx = _tracker.createInstance<mygrammarParser::AssignSmthContext>(_localctx);
      enterOuterAlt(_localctx, 2);
      setState(45);
      assignment();
      setState(46);
      match(mygrammarParser::T__0);
      break;
    }

    case 3: {
      _localctx = _tracker.createInstance<mygrammarParser::IfStmtContext>(_localctx);
      enterOuterAlt(_localctx, 3);
      setState(48);
      ifStatement();
      break;
    }

    case 4: {
      _localctx = _tracker.createInstance<mygrammarParser::WhileStmtContext>(_localctx);
      enterOuterAlt(_localctx, 4);
      setState(49);
      whileStatement();
      break;
    }

    case 5: {
      _localctx = _tracker.createInstance<mygrammarParser::PrintStmtContext>(_localctx);
      enterOuterAlt(_localctx, 5);
      setState(50);
      printStatement();
      setState(51);
      match(mygrammarParser::T__0);
      break;
    }

    case 6: {
      _localctx = _tracker.createInstance<mygrammarParser::ExprStmtContext>(_localctx);
      enterOuterAlt(_localctx, 6);
      setState(53);
      expression();
      setState(54);
      match(mygrammarParser::T__0);
      break;
    }

    default:
      break;
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- PeremDeclarationContext ------------------------------------------------------------------

mygrammarParser::PeremDeclarationContext::PeremDeclarationContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

mygrammarParser::TypeContext* mygrammarParser::PeremDeclarationContext::type() {
  return getRuleContext<mygrammarParser::TypeContext>(0);
}

tree::TerminalNode* mygrammarParser::PeremDeclarationContext::ID() {
  return getToken(mygrammarParser::ID, 0);
}

mygrammarParser::ExpressionContext* mygrammarParser::PeremDeclarationContext::expression() {
  return getRuleContext<mygrammarParser::ExpressionContext>(0);
}


size_t mygrammarParser::PeremDeclarationContext::getRuleIndex() const {
  return mygrammarParser::RulePeremDeclaration;
}


std::any mygrammarParser::PeremDeclarationContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<mygrammarVisitor*>(visitor))
    return parserVisitor->visitPeremDeclaration(this);
  else
    return visitor->visitChildren(this);
}

mygrammarParser::PeremDeclarationContext* mygrammarParser::peremDeclaration() {
  PeremDeclarationContext *_localctx = _tracker.createInstance<PeremDeclarationContext>(_ctx, getState());
  enterRule(_localctx, 4, mygrammarParser::RulePeremDeclaration);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(58);
    type();
    setState(59);
    match(mygrammarParser::ID);
    setState(62);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == mygrammarParser::T__1) {
      setState(60);
      match(mygrammarParser::T__1);
      setState(61);
      expression();
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- TypeContext ------------------------------------------------------------------

mygrammarParser::TypeContext::TypeContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t mygrammarParser::TypeContext::getRuleIndex() const {
  return mygrammarParser::RuleType;
}


std::any mygrammarParser::TypeContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<mygrammarVisitor*>(visitor))
    return parserVisitor->visitType(this);
  else
    return visitor->visitChildren(this);
}

mygrammarParser::TypeContext* mygrammarParser::type() {
  TypeContext *_localctx = _tracker.createInstance<TypeContext>(_ctx, getState());
  enterRule(_localctx, 6, mygrammarParser::RuleType);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(64);
    _la = _input->LA(1);
    if (!(_la == mygrammarParser::T__2

    || _la == mygrammarParser::T__3)) {
    _errHandler->recoverInline(this);
    }
    else {
      _errHandler->reportMatch(this);
      consume();
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- AssignmentContext ------------------------------------------------------------------

mygrammarParser::AssignmentContext::AssignmentContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* mygrammarParser::AssignmentContext::ID() {
  return getToken(mygrammarParser::ID, 0);
}

mygrammarParser::ExpressionContext* mygrammarParser::AssignmentContext::expression() {
  return getRuleContext<mygrammarParser::ExpressionContext>(0);
}


size_t mygrammarParser::AssignmentContext::getRuleIndex() const {
  return mygrammarParser::RuleAssignment;
}


std::any mygrammarParser::AssignmentContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<mygrammarVisitor*>(visitor))
    return parserVisitor->visitAssignment(this);
  else
    return visitor->visitChildren(this);
}

mygrammarParser::AssignmentContext* mygrammarParser::assignment() {
  AssignmentContext *_localctx = _tracker.createInstance<AssignmentContext>(_ctx, getState());
  enterRule(_localctx, 8, mygrammarParser::RuleAssignment);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(66);
    match(mygrammarParser::ID);
    setState(67);
    match(mygrammarParser::T__1);
    setState(68);
    expression();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- IfStatementContext ------------------------------------------------------------------

mygrammarParser::IfStatementContext::IfStatementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

mygrammarParser::ExpressionContext* mygrammarParser::IfStatementContext::expression() {
  return getRuleContext<mygrammarParser::ExpressionContext>(0);
}

std::vector<mygrammarParser::StatementContext *> mygrammarParser::IfStatementContext::statement() {
  return getRuleContexts<mygrammarParser::StatementContext>();
}

mygrammarParser::StatementContext* mygrammarParser::IfStatementContext::statement(size_t i) {
  return getRuleContext<mygrammarParser::StatementContext>(i);
}


size_t mygrammarParser::IfStatementContext::getRuleIndex() const {
  return mygrammarParser::RuleIfStatement;
}


std::any mygrammarParser::IfStatementContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<mygrammarVisitor*>(visitor))
    return parserVisitor->visitIfStatement(this);
  else
    return visitor->visitChildren(this);
}

mygrammarParser::IfStatementContext* mygrammarParser::ifStatement() {
  IfStatementContext *_localctx = _tracker.createInstance<IfStatementContext>(_ctx, getState());
  enterRule(_localctx, 10, mygrammarParser::RuleIfStatement);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(70);
    match(mygrammarParser::T__4);
    setState(71);
    match(mygrammarParser::T__5);
    setState(72);
    expression();
    setState(73);
    match(mygrammarParser::T__6);
    setState(74);
    match(mygrammarParser::T__7);
    setState(78);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 241178744) != 0)) {
      setState(75);
      statement();
      setState(80);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(81);
    match(mygrammarParser::T__8);
    setState(91);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == mygrammarParser::T__9) {
      setState(82);
      match(mygrammarParser::T__9);
      setState(83);
      match(mygrammarParser::T__7);
      setState(87);
      _errHandler->sync(this);
      _la = _input->LA(1);
      while ((((_la & ~ 0x3fULL) == 0) &&
        ((1ULL << _la) & 241178744) != 0)) {
        setState(84);
        statement();
        setState(89);
        _errHandler->sync(this);
        _la = _input->LA(1);
      }
      setState(90);
      match(mygrammarParser::T__8);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- WhileStatementContext ------------------------------------------------------------------

mygrammarParser::WhileStatementContext::WhileStatementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

mygrammarParser::ExpressionContext* mygrammarParser::WhileStatementContext::expression() {
  return getRuleContext<mygrammarParser::ExpressionContext>(0);
}

std::vector<mygrammarParser::StatementContext *> mygrammarParser::WhileStatementContext::statement() {
  return getRuleContexts<mygrammarParser::StatementContext>();
}

mygrammarParser::StatementContext* mygrammarParser::WhileStatementContext::statement(size_t i) {
  return getRuleContext<mygrammarParser::StatementContext>(i);
}


size_t mygrammarParser::WhileStatementContext::getRuleIndex() const {
  return mygrammarParser::RuleWhileStatement;
}


std::any mygrammarParser::WhileStatementContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<mygrammarVisitor*>(visitor))
    return parserVisitor->visitWhileStatement(this);
  else
    return visitor->visitChildren(this);
}

mygrammarParser::WhileStatementContext* mygrammarParser::whileStatement() {
  WhileStatementContext *_localctx = _tracker.createInstance<WhileStatementContext>(_ctx, getState());
  enterRule(_localctx, 12, mygrammarParser::RuleWhileStatement);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(93);
    match(mygrammarParser::T__10);
    setState(94);
    match(mygrammarParser::T__5);
    setState(95);
    expression();
    setState(96);
    match(mygrammarParser::T__6);
    setState(97);
    match(mygrammarParser::T__7);
    setState(101);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 241178744) != 0)) {
      setState(98);
      statement();
      setState(103);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(104);
    match(mygrammarParser::T__8);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- PrintStatementContext ------------------------------------------------------------------

mygrammarParser::PrintStatementContext::PrintStatementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

mygrammarParser::ExpressionContext* mygrammarParser::PrintStatementContext::expression() {
  return getRuleContext<mygrammarParser::ExpressionContext>(0);
}


size_t mygrammarParser::PrintStatementContext::getRuleIndex() const {
  return mygrammarParser::RulePrintStatement;
}


std::any mygrammarParser::PrintStatementContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<mygrammarVisitor*>(visitor))
    return parserVisitor->visitPrintStatement(this);
  else
    return visitor->visitChildren(this);
}

mygrammarParser::PrintStatementContext* mygrammarParser::printStatement() {
  PrintStatementContext *_localctx = _tracker.createInstance<PrintStatementContext>(_ctx, getState());
  enterRule(_localctx, 14, mygrammarParser::RulePrintStatement);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(106);
    match(mygrammarParser::T__11);
    setState(107);
    match(mygrammarParser::T__5);
    setState(108);
    expression();
    setState(109);
    match(mygrammarParser::T__6);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ExpressionContext ------------------------------------------------------------------

mygrammarParser::ExpressionContext::ExpressionContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

mygrammarParser::LogicalOrContext* mygrammarParser::ExpressionContext::logicalOr() {
  return getRuleContext<mygrammarParser::LogicalOrContext>(0);
}


size_t mygrammarParser::ExpressionContext::getRuleIndex() const {
  return mygrammarParser::RuleExpression;
}


std::any mygrammarParser::ExpressionContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<mygrammarVisitor*>(visitor))
    return parserVisitor->visitExpression(this);
  else
    return visitor->visitChildren(this);
}

mygrammarParser::ExpressionContext* mygrammarParser::expression() {
  ExpressionContext *_localctx = _tracker.createInstance<ExpressionContext>(_ctx, getState());
  enterRule(_localctx, 16, mygrammarParser::RuleExpression);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(111);
    logicalOr();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- LogicalOrContext ------------------------------------------------------------------

mygrammarParser::LogicalOrContext::LogicalOrContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t mygrammarParser::LogicalOrContext::getRuleIndex() const {
  return mygrammarParser::RuleLogicalOr;
}

void mygrammarParser::LogicalOrContext::copyFrom(LogicalOrContext *ctx) {
  ParserRuleContext::copyFrom(ctx);
}

//----------------- OrContext ------------------------------------------------------------------

std::vector<mygrammarParser::LogicalAndContext *> mygrammarParser::OrContext::logicalAnd() {
  return getRuleContexts<mygrammarParser::LogicalAndContext>();
}

mygrammarParser::LogicalAndContext* mygrammarParser::OrContext::logicalAnd(size_t i) {
  return getRuleContext<mygrammarParser::LogicalAndContext>(i);
}

mygrammarParser::OrContext::OrContext(LogicalOrContext *ctx) { copyFrom(ctx); }


std::any mygrammarParser::OrContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<mygrammarVisitor*>(visitor))
    return parserVisitor->visitOr(this);
  else
    return visitor->visitChildren(this);
}
mygrammarParser::LogicalOrContext* mygrammarParser::logicalOr() {
  LogicalOrContext *_localctx = _tracker.createInstance<LogicalOrContext>(_ctx, getState());
  enterRule(_localctx, 18, mygrammarParser::RuleLogicalOr);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    _localctx = _tracker.createInstance<mygrammarParser::OrContext>(_localctx);
    enterOuterAlt(_localctx, 1);
    setState(113);
    logicalAnd();
    setState(118);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == mygrammarParser::T__12) {
      setState(114);
      match(mygrammarParser::T__12);
      setState(115);
      logicalAnd();
      setState(120);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- LogicalAndContext ------------------------------------------------------------------

mygrammarParser::LogicalAndContext::LogicalAndContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t mygrammarParser::LogicalAndContext::getRuleIndex() const {
  return mygrammarParser::RuleLogicalAnd;
}

void mygrammarParser::LogicalAndContext::copyFrom(LogicalAndContext *ctx) {
  ParserRuleContext::copyFrom(ctx);
}

//----------------- AndContext ------------------------------------------------------------------

std::vector<mygrammarParser::EqualityContext *> mygrammarParser::AndContext::equality() {
  return getRuleContexts<mygrammarParser::EqualityContext>();
}

mygrammarParser::EqualityContext* mygrammarParser::AndContext::equality(size_t i) {
  return getRuleContext<mygrammarParser::EqualityContext>(i);
}

mygrammarParser::AndContext::AndContext(LogicalAndContext *ctx) { copyFrom(ctx); }


std::any mygrammarParser::AndContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<mygrammarVisitor*>(visitor))
    return parserVisitor->visitAnd(this);
  else
    return visitor->visitChildren(this);
}
mygrammarParser::LogicalAndContext* mygrammarParser::logicalAnd() {
  LogicalAndContext *_localctx = _tracker.createInstance<LogicalAndContext>(_ctx, getState());
  enterRule(_localctx, 20, mygrammarParser::RuleLogicalAnd);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    _localctx = _tracker.createInstance<mygrammarParser::AndContext>(_localctx);
    enterOuterAlt(_localctx, 1);
    setState(121);
    equality();
    setState(126);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == mygrammarParser::T__13) {
      setState(122);
      match(mygrammarParser::T__13);
      setState(123);
      equality();
      setState(128);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- EqualityContext ------------------------------------------------------------------

mygrammarParser::EqualityContext::EqualityContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t mygrammarParser::EqualityContext::getRuleIndex() const {
  return mygrammarParser::RuleEquality;
}

void mygrammarParser::EqualityContext::copyFrom(EqualityContext *ctx) {
  ParserRuleContext::copyFrom(ctx);
}

//----------------- EqualContext ------------------------------------------------------------------

std::vector<mygrammarParser::ComparisonContext *> mygrammarParser::EqualContext::comparison() {
  return getRuleContexts<mygrammarParser::ComparisonContext>();
}

mygrammarParser::ComparisonContext* mygrammarParser::EqualContext::comparison(size_t i) {
  return getRuleContext<mygrammarParser::ComparisonContext>(i);
}

mygrammarParser::EqualContext::EqualContext(EqualityContext *ctx) { copyFrom(ctx); }


std::any mygrammarParser::EqualContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<mygrammarVisitor*>(visitor))
    return parserVisitor->visitEqual(this);
  else
    return visitor->visitChildren(this);
}
mygrammarParser::EqualityContext* mygrammarParser::equality() {
  EqualityContext *_localctx = _tracker.createInstance<EqualityContext>(_ctx, getState());
  enterRule(_localctx, 22, mygrammarParser::RuleEquality);
  size_t _la = 0;

#if __cplusplus > 201703L
